--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="parse_iterator_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="stl_demo.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
