--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="parse_iterator.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="dad_parse_iterator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
