--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="dad_parse_iterator_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="base_parse_test.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
