add demo for encoding and traits

--- a/model/model.vcxproj
+++ b/model/model.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="base_parse.h" />
     <ClInclude Include="dad_parse_iterator.h" />
+    <ClInclude Include="file_parse.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="parse_iterator.h" />
     <ClInclude Include="stdafx.h" />
