--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -24,14 +24,22 @@
     <ClCompile Include="parse_iterator_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="stl_demo.cc">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="dad_parse_iterator_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="base_parse_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="demo_c11\demo_encoding.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="demo_c11\demo_stl_algorithm.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="demo_c11\my_advance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
