--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="demo_c11\demo_encoding.cpp" />
     <ClCompile Include="demo_c11\demo_stl_array.cc" />
     <ClCompile Include="demo_c11\demo_stl_shared_ptr.cc" />
+    <ClCompile Include="demo_c11\file_parse_test.cc" />
     <ClCompile Include="demo_c11\wtl_polymorphism.cc" />
     <ClCompile Include="gtest_main.cc" />
     <ClCompile Include="gtest_demo.cc" />
