--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="dad_file_parse_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="db_test.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demo_c11\my_advance.h">
