bulk_insert:two fields,trouble for static member of class in dll project

--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="db_quote.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="stdmore.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="global.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="db.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
