--- a/model/model.vcxproj
+++ b/model/model.vcxproj
@@ -103,9 +103,11 @@ if not exist "$(TargetDir)sqlite3.dll" copy $(SolutionDir)lib\sqlite3.dll $(Targ
     <ClInclude Include="model.h" />
     <ClInclude Include="parse_iterator.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="stdmore.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="db.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
