--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="base_parse_test.cc" />
     <ClCompile Include="dad_file_parse_test.cc" />
     <ClCompile Include="dad_parse_iterator_test.cc" />
+    <ClCompile Include="db_quote_test.cc" />
     <ClCompile Include="db_test.cc" />
     <ClCompile Include="demo_c11\demo_encoding.cpp" />
     <ClCompile Include="demo_c11\demo_stl_array.cc" />
