--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="demo_c11\faq_iterator_as_point.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="db_quote_test.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demo_c11\my_advance.h">
