CalcRect test ok,size and postion by percent

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="parse_iterator_test.cc" />
     <ClCompile Include="demo_c11\demo_stl_algorithm.cc" />
     <ClCompile Include="demo_singleton\singleton_v1.cpp" />
+    <ClCompile Include="ui_layout_test.cc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\model\model.vcxproj">
