now,change color for frame and view

--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <ClInclude Include="AboutDlg.h" />
     <ClInclude Include="base_dialog.h" />
+    <ClInclude Include="CCtlColor.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
