--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="base_dialog.h" />
     <ClInclude Include="CCtlColor.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="QuoteView.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stockView.h" />
