--- a/stock/stock.vcxproj.filters
+++ b/stock/stock.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="CCtlColor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QuoteView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="stock.rc">
