--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -134,4 +134,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="stock.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
