--- a/stock/stock.vcxproj.filters
+++ b/stock/stock.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="stock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ThreadTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="atlddxEx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
