--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="stdmore.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
