--- a/test/test.vcxproj.filters
+++ b/test/test.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="ui_layout_test.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="demo_c11\demo_chrono.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demo_c11\my_advance.h">
