using global var save begin_date and end_date.clear all waining.

--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="timer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="singleton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
