--- a/model/model.vcxproj
+++ b/model/model.vcxproj
@@ -102,6 +102,7 @@ if not exist "$(TargetDir)sqlite3.dll" copy $(SolutionDir)lib\sqlite3.dll $(Targ
     <ClInclude Include="global.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="parse_iterator.h" />
+    <ClInclude Include="singleton.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stdmore.h" />
     <ClInclude Include="targetver.h" />
