--- a/model/model.vcxproj
+++ b/model/model.vcxproj
@@ -101,6 +101,7 @@ if not exist "$(TargetDir)sqlite3.dll" copy $(SolutionDir)lib\sqlite3.dll $(Targ
     <ClInclude Include="db_quote.h" />
     <ClInclude Include="file_parse.h" />
     <ClInclude Include="global.h" />
+    <ClInclude Include="import_model_base.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="parse_iterator.h" />
     <ClInclude Include="singleton.h" />
