--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -124,9 +124,10 @@
     <ClInclude Include="atlddxEx.h" />
     <ClInclude Include="base_dialog.h" />
     <ClInclude Include="CCtlColor.h" />
+    <ClInclude Include="import_view.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MultiViewFrame.h" />
-    <ClInclude Include="QuoteView.h" />
+    <ClInclude Include="import_view_model.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stockView.h" />
