--- a/stock/stock.vcxproj.filters
+++ b/stock/stock.vcxproj.filters
@@ -47,9 +47,6 @@
     <ClInclude Include="CCtlColor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="QuoteView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MultiViewFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -57,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ThreadTask.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="import_view.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="import_view_model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
