--- a/stock/stock.vcxproj.filters
+++ b/stock/stock.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ThreadTask.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="import_view_model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
