SetVisble for state 0.

--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stockView.h" />
     <ClInclude Include="ThreadTask.h" />
+    <ClInclude Include="ui_state.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="stock.rc" />
