--- a/stock/stock.vcxproj.filters
+++ b/stock/stock.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="import_view_model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui_state.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="stock.rc">
