--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="import_model_base.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="db_exright.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
