test project: file name and test name

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -88,21 +88,22 @@
     <ClCompile Include="dad_parse_iterator_test.cc" />
     <ClCompile Include="db_quote_test.cc" />
     <ClCompile Include="db_test.cc" />
-    <ClCompile Include="demo_c11\demo_aligned_storage.cc" />
-    <ClCompile Include="demo_c11\demo_chrono.cc" />
-    <ClCompile Include="demo_c11\demo_encoding.cpp" />
-    <ClCompile Include="demo_c11\demo_rvalue_references.cc" />
-    <ClCompile Include="demo_c11\demo_stl_array.cc" />
-    <ClCompile Include="demo_c11\demo_stl_shared_ptr.cc" />
-    <ClCompile Include="demo_c11\demo_iterator_as_point.cc" />
-    <ClCompile Include="demo_c11\demo_vector.cc" />
+    <ClCompile Include="demo_c11\demo_c11_aligned_storage.cc" />
+    <ClCompile Include="demo_c11\demo_c11_unordered_map.cc" />
+    <ClCompile Include="demo_c11\demo_c11_chrono.cc" />
+    <ClCompile Include="demo_c11\demo_c11_encoding.cc" />
+    <ClCompile Include="demo_c11\demo_c11_rvalue_references.cc" />
+    <ClCompile Include="demo_c11\demo_c11_array.cc" />
+    <ClCompile Include="demo_c11\demo_c11_shared_ptr.cc" />
+    <ClCompile Include="demo_c11\demo_c11_enable_if.cc" />
+    <ClCompile Include="demo_c11\demo_c11_vector.cc" />
     <ClCompile Include="file_parse_test.cc" />
     <ClCompile Include="demo_c11\demo_wtl_polymorphism.cc" />
     <ClCompile Include="demo_singleton\singleton_v1_test.cpp" />
     <ClCompile Include="gtest_main.cc" />
     <ClCompile Include="gtest_demo.cc" />
     <ClCompile Include="parse_iterator_test.cc" />
-    <ClCompile Include="demo_c11\demo_stl_algorithm.cc" />
+    <ClCompile Include="demo_c11\demo_stl_traits_in_algorithm.cc" />
     <ClCompile Include="demo_singleton\singleton_v1.cpp" />
     <ClCompile Include="ui_layout_test.cc" />
   </ItemGroup>
@@ -112,7 +113,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="demo_c11\demo_traits_algorithm.h" />
     <ClInclude Include="demo_singleton\singleton_v1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
