--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="db_exright.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="stock_map.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="global.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="stock_map.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
