import finance file.

--- a/model/model.vcxproj
+++ b/model/model.vcxproj
@@ -98,6 +98,7 @@ if not exist "$(TargetDir)sqlite3.dll" copy $(SolutionDir)lib\sqlite3.dll $(Targ
     <ClInclude Include="dad_parse_iterator.h" />
     <ClInclude Include="db.h" />
     <ClInclude Include="db_exright.h" />
+    <ClInclude Include="db_finance.h" />
     <ClInclude Include="db_quote.h" />
     <ClInclude Include="file_parse.h" />
     <ClInclude Include="global.h" />
