--- a/model/model.vcxproj.filters
+++ b/model/model.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="stock_map.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="db_finance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
