--- a/stock/stock.vcxproj
+++ b/stock/stock.vcxproj
@@ -127,11 +127,13 @@
     <ClInclude Include="atlddxEx.h" />
     <ClInclude Include="base_dialog.h" />
     <ClInclude Include="CCtlColor.h" />
+    <ClInclude Include="controls.h" />
     <ClInclude Include="import_view.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MultiViewFrame.h" />
     <ClInclude Include="import_view_model.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="search_view.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="stockView.h" />
     <ClInclude Include="ThreadTask.h" />
